now have the Dark mode and light mode button but i cant get the webpage to change theme colors. im not sure what im exactly doing wrong. im going to go back and look and the past homework to see if i can find my issue

--- a/src/global.module.scss
+++ b/src/global.module.scss
@@ -7,15 +7,165 @@ html,body{
   width: 100vw;
 }
 
-// :root {
-//   --bg-color: #ffffff;
-//   --text-color: #333333;
-// }
+:root {
+  /* define your root variables */
 
 
+html.light {
+  --background-color: #fff;
+  --text-color: #000;
+}
+
+html.dark {
+  --background-color: #000;
+  --text-color: #fff;
+}
 
 body {
-  background-color: var(--bg-color);
+  background-color: var(--background-color);
   color: var(--text-color);
+}
+
+}
+// body {
+//   background-color: var(--bg-color);
+//   color: var(--text-color);
   
+// }
+.dark {
+  background-color: var(--almost-black);
+  color: var(--lightest-grey);
+}
+
+.dark body {
+  background-color: var(--almost-black);
+}
+
+.dark main {
+  background-color: var(--almost-black);
+  background: repeat;
+}
+
+.dark h1 {
+  font-size: 4rem;
+  color: var(--lightest-grey);
+}
+
+.dark h2 {
+  color: var(--green);
+}
+
+.dark h4 {
+  color: var(--grey);
+}
+
+.dark p {
+  color: var(--lightest-grey);
+}
+
+.dark header {
+  border-bottom: 1px solid var(--dark-grey);
+  background-color: var(--almost-black);
+}
+
+.dark footer {
+  border-top: 1px solid var(--dark-grey);
+  background-color: var(--almost-black);
+}
+
+.dark a .underline {
+  position: relative;
+  text-decoration: none;
+}
+.dark a .underline::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  background-color: var(--lightest-grey);
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.dark a .underline:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+
+/* light */
+.light {
+  background-color: var(--lightest-grey);
+  color: var(--almost-black);
+}
+/* body is a parent element how do i target this?? */
+.light,
+body {
+  background-color: var(--lightest-grey);
+  color: var(--almost-black);
+}
+
+.light h1 {
+  font-size: 4rem;
+  color: var(--blue);
+}
+
+.light h2 {
+  color: var(--green);
+}
+
+.light h4 {
+  color: var(--yellow);
+}
+
+.light p {
+  color: var(--almost-black);
+}
+
+.light header a:hover {
+  color: var(--almost-black);
+}
+
+.light header {
+  border-bottom: 1px solid var(--light-grey);
+  background-color: var(--lightest-grey);
+}
+
+.light footer {
+  border-top: 1px solid var(--light-grey);
+  background-color: var(--lightest-grey);
+}
+
+.light header button:hover {
+  color: var(--almost-black);
+}
+
+.light footer a img {
+  filter: invert(90%);
+}
+
+.light a .underline {
+  position: relative;
+  text-decoration: none;
+}
+.light a .underline::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  background-color: var(--blue);
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.light a .underline:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
 }
